nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-nginx
spec:
  selector:
    app: my-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
